misc tests failed with "assert(env->is_enabled(JVMTI_EVENT_OBJECT_FREE)) failed: checking"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: None
    • Component/s: hotspot
    • b27

      The following test failed in the JDK16 CI:

      vm/jvmti/ObjectFree/ofre001/ofre00101/ofre00101.html

      Here's a snippet from the log file:

      #section:testExecute
      ----------messages:(1/1276)*----------
      command: com.sun.jck.lib.ExecJCKTestOtherJVMCmd PATH=C:\\ade\\mesos\\work_dir\\jib-master\\install\\jck\\16\\b10\\extra\\bundles\\JCK-extra-16.zip\\JCK-extra-16\\binaries\\windows-amd64\\lib\\64bit SystemRoot=C:\\Windows SystemDrive=C: TMP=T:\\testoutput\\test-support\\jck_runtime_vm TEMP=T:\\testoutput\\test-support\\jck_runtime_vm C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-16+26-1682\\windows-x64-debug.jdk\\jdk-16\\fastdebug\\bin\\java.exe -XX:+CreateCoredumpOnCrash -XX:+UseParallelGC -XX:+UseNUMA -XX:MaxRAMPercentage=3.125 --add-modules java.xml.crypto --add-exports java.xml.crypto/org.jcp.xml.dsig.internal.dom=ALL-UNNAMED -Xms32m -Xmx1024m -Djdk.attach.allowAttachSelf=true --enable-preview -agentlib:jckjvmti=ofre00101 -classpath C:\\ade\\mesos\\work_dir\\jib-master\\install\\jck\\16\\b10\\bundles\\JCK-runtime-16.jar\\JCK-runtime-16\\classes;;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jck\\16\\b10\\bundles\\JCK-runtime-16.jar\\JCK-runtime-16\\lib\\extensions\\JCK-extensions.jar -Djava.security.policy=C:\\ade\\mesos\\work_dir\\jib-master\\install\\jck\\16\\b10\\bundles\\JCK-runtime-16.jar\\JCK-runtime-16\\lib\\jck.policy javasoft.sqe.tests.vm.jvmti.ofre001.ofre00101.ofre00101 -platform.jvmtiSupported true -platform.nativeLibsLinkage dynamic
      ----------out1:(0/0)----------
      ----------out2:(18/1033)*----------
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/prims/jvmtiExport.cpp:1490
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:/workspace/open/src/hotspot/share/prims/jvmtiExport.cpp:1490), pid=607740, tid=450616
      # assert(env->is_enabled(JVMTI_EVENT_OBJECT_FREE)) failed: checking
      #
      # JRE version: Java(TM) SE Runtime Environment (16.0+26) (fastdebug build 16-ea+26-1682)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+26-1682, mixed mode, sharing, tiered, compressed oops, parallel gc, windows-amd64)
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jck_runtime_vm\\hs_err_pid607740.mdmp
      #
      # An error report file with more information is saved as:
      # T:\\testoutput\\test-support\\jck_runtime_vm\\hs_err_pid607740.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      result: Failed. unexpected exit code: exit code 1

            Assignee:
            Coleen Phillimore
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: