8256830: misc tests failed with "assert(env->is_enabled(JVMTI_EVENT_OBJECT_FREE)) failed: checking"

Reviewed-by: kbarrett, sspitsyn, dholmes